5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1785_1600.log
== TEST (2019-05-30 10:04:42) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(round(a*0.15), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:05:56) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:47) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:54) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:32) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum[a]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:50) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:07:51) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(a)
-- EXECUTION TIME:
0.918888
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
[11.32 40.2  32.    0.  ]
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
[32.  44.  32.1 43.2]
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
[23  2  1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:51) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:08:04) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
	print(a)
-- ERROR:
File "XXXX", line 6
    print(a)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:08:28) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:08:34) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:04) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(round(vet*0.15), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:42) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(round(vet*0.15), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:10:19) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
print(round(vet*0.15), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:11) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
if (vet>80):
	desconto = sum*0.15
	print(round(desconto-vet, 2))
else: 
	print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:34) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
if (vet>80):
	desconto = sum*0.15
	print(round(desconto-vet, 2))
else: 
	print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:50) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
if (vet=>80):
	desconto = sum*0.15
	print(round(desconto-vet, 2))
else: 
	print(vet)
-- ERROR:
File "XXXX", line 6
    if (vet=>80):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:56) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = sum(a)
if (vet>=80):
	desconto = sum*0.15
	print(round(desconto-vet, 2))
else: 
	print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:21:09) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0
soma = 0 

while (i>=80):
	i = i + 1
	desconto = vet[i] * 0.15
	print(round(sum(vet), 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:21:20) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0
soma = 0 

while (i>=80):
	i = i + 1
	desconto = vet[i] * 0.15
print(round(sum(vet), 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:21:54) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
soma = 0 

while (i>=80):
	i = i + 1
	desconto = vet[i] * 0.15
print(round(sum(vet), 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:23:45) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
soma = 0 

while (i>=80):
	i = i + 1
	desconto = vet[i] * 0.15
	valor = vet[i] - desconto

print(round(sum(vet), 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:08) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0

while (i>=80):
	i = i + 1
	desconto = vet[i] * 0.15
	valor = sum(vet[i]) - desconto
	print(valor)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:18) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0

while (i>=80):
	i = i + 1
	desconto = vet[i] * 0.15
	valor = sum(vet[i]) - desconto
print(valor)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:27:21) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
desconto = vet[i] * 0.15
while (i>=80):
	i = i + 1
	valor = sum(vet[i]) - desconto
print(valor)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:27:30) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
desconto = vet[i] * 0.15
while (i>=80):
	i = i + 1
	valor = sum(vet[i]) - desconto
	print(valor)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:27:54) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
desconto = vet(i) * 0.15
while (i>=80):
	i = i + 1
	valor = sum(vet(i) - desconto)
print(valor)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:28:27) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
desconto = vet[i] * 0.15
while (i>=80):
	i = i + 1
	valor = sum(vet[i]) - desconto
print(valor)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:28:46) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
desconto = vet[i] * 0.15
while (i>=80):
	i = i + 1
	a = sum(vet[i]) - desconto
print(a)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:46) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
desconto = vet[i] * 0.15
while (i>=80):
	i = i + 1
	a = (vet[i]) - desconto
else:
	b = vet[i]
print(round(sum(a)+b), 2)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:11) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
desconto = vet[i] * 0.15
while (i>=80):
	i = i + 1
	a = (vet[i]) - desconto
else:
	b = vet[i]
print(round(sum(a))
	

	
	
-- ERROR:
File "XXXX", line 17
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:23) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
desconto = vet[i] * 0.15
while (i>=80):
	i = i + 1
	a = (vet[i]) - desconto
else:
	b = vet[i]
print(sum(a))
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:34:35) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
desconto = vet[i] * 0.15
while (i>=80):
	i = i + 1
	a = (vet[i]) - desconto
else:
	b = vet[i]
print(sum(vet))
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:35:24) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))
vet = [a]
i = 0
desconto = vet[i] * 0.15
while (i>=80):
	a = (vet[i]) - desconto
	i = i + 1
else:
	b = vet[i]
print(sum(vet))
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:37:52) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = [a]
i = 0
desconto = vet[i] * 0.15

while (i>=80):
	desconto = vet[i] * 0.15
	a = vet[i] - desconto
	i = i + 1
	
else:
	b = vet[i]
print(sum(vet))
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:38:10) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = [a]
i = 0
desconto = vet[i] * 0.15

while (i>=80):
	desconto = vet[i] * 0.15
	a = vet[i] - desconto
	i = i + 1
	
print(vet)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:38:28) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = [a]
i = 0
desconto = vet[i] * 0.15

while (i>=80):
	desconto = vet[i] * 0.15
	a = vet[i] - desconto
	i = i + 1
	
print(vet)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:38:31) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = [a]
i = 0
desconto = vet[i] * 0.15

while (i>=80):
	desconto = vet[i] * 0.15
	a = vet[i] - desconto
	i = i + 1
	
print(vet)
	

	
	
-- EXECUTION TIME:
0.359627
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
[array([11.32, 40.2 , 32.  ,  0.  ])]
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
[array([32. , 44. , 32.1, 43.2])]
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
[array([23,  2,  1])]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:38:31) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = [a]
i = 0
desconto = vet[i] * 0.15

while (i>=80):
	desconto = vet[i] * 0.15
	a = vet[i] - desconto
	i = i + 1
	
print(vet)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:38:50) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

vet = [a]
i = 0
desconto = vet[i] * 0.15

while (i>=80):
	desconto = vet[i] * 0.15
	a = vet[i] - desconto
	i = i + 1
print(a)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:11) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))


i = 0
desconto = vet[i] * 0.15

while (i>=80):
	desconto = vet[i] * 0.15
	a = vet[i] - desconto
	i = i + 1
print()
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:30) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))


i = 0
desconto = vet[i] * 0.15

while (i>=80):
	desconto = a[i] * 0.15
	a = a[i] - desconto
	i = i + 1
print(a)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:44) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))


i = 0


while (i>=80):
	desconto = a[i] * 0.15
	a = a[i] - desconto
	i = i + 1
print(a)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:52) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))


i = 0


while (i>=80):
	desconto = a[i] * 0.15
	a = a[i] - desconto
	i = i + 1
	print(a)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:40:09) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))


i = 0


while (i>=80):
	desconto = a[i] * 0.15
	a = a[i] - desconto
	i = i + 1
print(i)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:45:45) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0

while (i>=80):
	i = i + 1
	b = sum(a) *0.15
print(b)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:01) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0
b = [a]
while (i>=80):
	i = i + 1
	b = sum(a) *0.15
print(b)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:24) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0
while (i>=80):
	i = i + 1
	b = sum(a) * 0.15
print(b)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:46:36) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0
while (i>=80):
	i = i + 1
	vet = sum(a) * 0.15
print(vet)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:47:49) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0
while (i>=80):
	i = i + 1
	vet = i[a] * 0.15
	desconto = i[a]-vet
print(desconto)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:48:43) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0
while (i>=80):
	i = i + 1

	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:53:40) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0

while (i<size(a)):
	if a[i] > 80:
		desconto = a[i]*0.15
		valor = a[i]-desconto
	else:
		valor = a[i]
print(sum(a[i]), 2)
		

	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:53:47) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0

while (i<size(a)):
	if a[i] > 80:
		desconto = a[i]*0.15
		valor = a[i]-desconto
	else:
		valor = a[i]
print(sum(a[i]), 2)
		

	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:53:55) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0

while (i<size(a)):
	if a[i] > 80:
		desconto = a[i]*0.15
		valor = a[i]-desconto
	else:
		valor = a[i]
		
print(sum(a[i]), 2)
		

	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:55:07) 
-- CODE:
from numpy import*

a = array(eval(input("valores: ")))

i = 0

while (i<size(a)):
	if a[i] > 80:
		desconto = a[i]*0.15
		valor = a[i]-desconto
	else:
		valor = a[i]
		
print(sum(a[i]), 2)
		

	

	
	
-- EXECUTION TIME:
72.3458
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:

-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:

-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
